test/positive/feature_instanceof.java

public class feature_instanceof {
  public feature_instanceof() {}
  public boolean m(Object x) {
    return x instanceof feature_instanceof;
  }
}
