test/negative/ClassWithIdenticalSignatures.java
public class ClassWithIdenticalSignatures {
    public ClassWithIdenticalSignatures() {
    }

    public int x(int a, int b) {
        return 0;
    }

    public void x(int x, int y) {

    }
}
